Updated project pages and index.html

--- a/templates/project-crime.html
+++ b/templates/project-crime.html
@@ -118,7 +118,7 @@ table {
   </div>
 
   <div class="content-section">
-    <img src="crime4.jpg" alt="Crime Data Clustering App" class="project-image img-fluid" />
+    <img src="../images/crime4.jpg" alt="Crime Data Clustering App" class="project-image img-fluid" />
 
     <h2>🔍 Features</h2>
     <ul class="mt-3">
@@ -153,8 +153,8 @@ table {
 
     <h2 class="mt-5">📊 Results</h2>
     <p class="mt-3">This app helps stakeholders identify crime-prone zones and allocate resources more efficiently based on data-driven insights.</p>
-    <img src="Screenshot 2025-06-23 093101.png" alt="" class="img1">
-<br><br><img src="kmeans.png" alt="" class="img2">
+    <img src="../images/Screenshot 2025-06-23 093101.png" alt="" class="img1">
+<br><br><img src="../images/kmeans.png" alt="" class="img2">
     <p class="mt-3">Here red cluster indicates low crime rate, green cluster indicates a moderate crime rate, and the blue cluster indicates a high crime rate. Hence from the clustering analysis, we can easily identify the cities having a high risk of criminal activities and take necessary action.</p>
   <h3>Cluster Summary</h2>
     <table>
@@ -191,7 +191,7 @@ table {
   </table>
     <div class="mt-5">
       <a href="https://github.com/ig-quinzel/crime-data-clustering" target="_blank" class="btn btn-primary me-3">View on GitHub</a>
-      <a href="index.html" class="btn btn-outline-light">← Back to Portfolio</a>
+      <a href="../index.html" class="btn btn-outline-light">← Back to Portfolio</a>
     </div>
   </div>
 
