--- a/templates/project-fakenews.html
+++ b/templates/project-fakenews.html
@@ -107,7 +107,7 @@ tr{
   </div>
 
   <div class="content-section">
-    <img src="11669710_20943884.jpg" alt="Fake News Detection" class="project-image img-fluid" />
+    <img src="../images/11669710_20943884.jpg" alt="Fake News Detection" class="project-image img-fluid" />
 
     <h2>🔍 Features</h2>
     <ul class="mt-3">
@@ -164,10 +164,10 @@ tr{
 
     <h2 class="mt-5">📊 Visualizations</h2>
     <p class="mt-3">Includes confusion matrices and model accuracy comparisons.</p>
-<img src="heat.png"  alt="Heat map">
+<img src="../images/heat.png"  alt="Heat map">
 <br>
 <br>
-<img src="acc.png" alt="">
+<img src="../images/acc.png" alt="">
     <h2 class="mt-5">🗃️ Dataset</h2>
     <p class="mt-3">
       Used the <strong>Fake and Real News Dataset</strong> from Kaggle containing labeled real and fake news articles.
@@ -175,7 +175,7 @@ tr{
 
     <div class="mt-5">
       <a href="https://github.com/ig-quinzel/Fake-News-Detection-using-Machine-Learning" target="_blank" class="btn btn-primary me-3">View on GitHub</a>
-      <a href="index.html" class="btn btn-outline-light">← Back to Portfolio</a>
+      <a href="../index.html" class="btn btn-outline-light">← Back to Portfolio</a>
     </div>
   </div>
 
