--- a/templates/project-metroflow.html
+++ b/templates/project-metroflow.html
@@ -86,7 +86,7 @@ font-size: 23px;
   </div>
 
   <div class="content-section">
-    <img src="metro.png" alt="MetroFlow Project" class="project-image img-fluid" />
+    <img src="../images/metro.png" alt="MetroFlow Project" class="project-image img-fluid" />
 
     <h2>🚀 Key Features</h2>
     <ul class="mt-3">
@@ -109,7 +109,7 @@ font-size: 23px;
     <p class="mt-3">
       MetroFlow helps city authorities and transport planners identify crowded stations, predict future demand, and plan expansions. With dynamic time-based insights, it supports optimizing train frequency and improving infrastructure.
     </p>
-    <img src="sumup.jpg" alt="" class="img1">
+    <img src="../images/sumup.jpg" alt="" class="img1">
 
     <h2 class="mt-5">🌐 Tech Stack</h2>
     <ul class="mt-3">
@@ -121,7 +121,7 @@ font-size: 23px;
 
     <div class="mt-5">
       <a href="https://github.com/ig-quinzel/MetroFlow-Passenger-s-Origin-Destination-Distribution-Prediction-Over-Metro-Networks" target="_blank" class="btn btn-primary me-3">View on GitHub</a>
-      <a href="index.html" class="btn btn-outline-light">← Back to Portfolio</a>
+      <a href="../index.html" class="btn btn-outline-light">← Back to Portfolio</a>
     </div>
   </div>
 
