--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(IMG_1910-pica.png);
+    background-image: url(images/IMG_1910-pica.png);
     background-size: contain;         /* show full image */
     background-repeat: no-repeat;
     background-position: right 50px;
@@ -237,8 +237,8 @@ nav ul li a:hover::after {
   border-radius: 225px;
 }
 .logo5{
-  width: 20px;  /* or any size like 50%, 100px */
-  height: au0to;  /* keeps the aspect ratio */
+  width: 30px;  /* or any size like 50%, 100px */
+  height: auto;  /* keeps the aspect ratio */
 }
 .worklist{
   display: grid;
