--- a/templates/project-meeting.html
+++ b/templates/project-meeting.html
@@ -85,7 +85,7 @@
   </div>
 
   <div class="content-section">
-    <img src="business.png" alt="AI Meeting Summarizer" class="project-image img-fluid" />
+    <img src="../images/business.png" alt="AI Meeting Summarizer" class="project-image img-fluid" />
 
     <h2>🚀 Features</h2>
     <ul class="mt-3">
@@ -108,7 +108,7 @@
 
     <div class="mt-5">
       <a href="https://github.com/ig-quinzel/AI-Meeting-Summariser" target="_blank" class="btn btn-primary me-3">View on GitHub</a>
-      <a href="index.html" class="btn btn-outline-light">← Back to Portfolio</a>
+      <a href="../index.html" class="btn btn-outline-light">← Back to Portfolio</a>
     </div>
   </div>
 
