--- a/templates/project-heart.html
+++ b/templates/project-heart.html
@@ -128,13 +128,13 @@ tr{
 
     <h2 class="mt-5">📈 Results and Evaluation</h2>
     <p class="mt-3">User inputs were processed through the model, and the following results were obtained:</p>
-<img src="images/Screenshot 2025-06-21 225709.png" alt="">
+<img src="../images/Screenshot 2025-06-21 225709.png" alt="">
 <br>
 <br>
-<img src="images/Screenshot 2025-06-21 225838.png" alt="img2" class="img2">
+<img src="../images/Screenshot 2025-06-21 225838.png" alt="img2" class="img2">
 <br>
 <br>
-<img src="images/Screenshot 2025-06-21 225819.png" alt="img3" class="img3">
+<img src="../images/Screenshot 2025-06-21 225819.png" alt="img3" class="img3">
      <p class="mt-3">Achieved high classification accuracy on test data, with balanced precision and recall. Confusion matrix insights enabled deeper model evaluation.</p>
       <table style="width: 100%; border-collapse: collapse; margin-top: 20px;">
     <thead>
